@@ -5,22 +5,20 @@ import com.mojang.blaze3d.shaders.Program;
 import com.mojang.blaze3d.systems.RenderSystem;
 import com.mojang.blaze3d.vertex.DefaultVertexFormat;
 import com.mojang.blaze3d.vertex.VertexFormat;
-import com.google.gson.JsonObject;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.ShaderInstance;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.packs.resources.Resource;
 import net.minecraft.server.packs.resources.ResourceProvider;
-import net.minecraft.util.GsonHelper;
 import net.vulkanmod.Initializer;
 import net.vulkanmod.interfaces.ShaderMixed;
-import net.vulkanmod.gl.GlEmulationLog;
 import net.vulkanmod.vulkan.shader.GraphicsPipeline;
 import net.vulkanmod.vulkan.shader.Pipeline;
-import net.vulkanmod.vulkan.shader.descriptor.UBO;
 import net.vulkanmod.vulkan.shader.layout.Uniform;
+import net.vulkanmod.vulkan.shader.descriptor.UBO;
 import net.vulkanmod.vulkan.shader.parser.GlslConverter;
 import net.vulkanmod.vulkan.util.MappedBuffer;
+import org.apache.commons.io.IOUtils;
 import org.jetbrains.annotations.Nullable;
 import org.lwjgl.system.MemoryUtil;
 import org.spongepowered.asm.mixin.Final;
@@ -31,227 +29,220 @@ import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.Redirect;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
-import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Supplier;
 
 @Mixin(value = ShaderInstance.class, priority = 900)
 public class ShaderInstanceM implements ShaderMixed {
 
-    @Shadow @Final private Map<String, com.mojang.blaze3d.shaders.Uniform> uniformMap;
-    @Shadow @Final private String name;
+    @Shadow(remap = false) @Final private Map<String, com.mojang.blaze3d.shaders.Uniform> f_173333_;
+    @Shadow(remap = false) @Final private String f_173300_;
 
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform MODEL_VIEW_MATRIX;
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform PROJECTION_MATRIX;
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform COLOR_MODULATOR;
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform LINE_WIDTH;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_173308_;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_173309_;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_200956_;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_173312_;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_173318_;
 
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform GLINT_ALPHA;
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform FOG_START;
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform FOG_END;
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform FOG_COLOR;
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform FOG_SHAPE;
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform TEXTURE_MATRIX;
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform GAME_TIME;
-    @Shadow @Final @Nullable public com.mojang.blaze3d.shaders.Uniform SCREEN_SIZE;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_267422_;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_173315_;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_173316_;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_173317_;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_202432_;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_173310_;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_173319_;
+    @Shadow(remap = false) @Final @Nullable public com.mojang.blaze3d.shaders.Uniform f_173311_;
 
     private String vsPath;
     private String fsName;
-    private String vulkanBindPath;
-    private VertexFormat pipelineFormat;
 
     private GraphicsPipeline pipeline;
-    private final Map<VertexFormat, GraphicsPipeline> variantPipelines = new HashMap<>();
     boolean isLegacy = false;
+
 
     public GraphicsPipeline getPipeline() {
         return pipeline;
     }
 
     public GraphicsPipeline getPipeline(VertexFormat drawFormat) {
-        if (this.pipeline == null || drawFormat == null || drawFormat.equals(this.pipelineFormat)) {
-            return this.pipeline;
-        }
-
-        if (this.isLegacy || this.vulkanBindPath == null) {
-            return this.pipeline;
-        }
-
-        return this.variantPipelines.computeIfAbsent(drawFormat, this::createPipelineVariant);
+        return pipeline;
     }
 
+    // Target Forge's ResourceLocation constructor: mod shaders registered via RegisterShadersEvent
+    // are constructed through it DIRECTLY, while the vanilla String constructor merely delegates to
+    // it. Injecting here covers both paths exactly once — an inject on the String overload never
+    // fires for mod shaders, leaving them with no pipeline (invisible geometry, e.g. the Wither
+    // Storm body).
     @Inject(method = "<init>(Lnet/minecraft/server/packs/resources/ResourceProvider;Lnet/minecraft/resources/ResourceLocation;Lcom/mojang/blaze3d/vertex/VertexFormat;)V", at = @At("RETURN"))
-    private void create_loc(ResourceProvider resourceProvider, ResourceLocation location, VertexFormat format, CallbackInfo ci) {
-        this.create(resourceProvider, location.toString(), format);
-    }
-
-    @Inject(method = "<init>(Lnet/minecraft/server/packs/resources/ResourceProvider;Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;)V", at = @At("RETURN"))
-    private void create_str(ResourceProvider resourceProvider, String name, VertexFormat format, CallbackInfo ci) {
-        this.create(resourceProvider, name, format);
-    }
-
-    private void create(ResourceProvider resourceProvider, String name, VertexFormat format) {
-        String path;
-        String namespace = "minecraft";
-        String namePath = name;
-
-        if (name.contains(":")) {
-            String[] split = name.split(String.valueOf(ResourceLocation.NAMESPACE_SEPARATOR), 2);
-            namespace = split[0];
-            namePath = split.length > 1 ? split[1] : "";
-        }
-
-        if (!isUsableShaderPath(namePath)) {
-            Initializer.LOGGER.warn("Skipping unsupported shader {}: empty shader path", name);
-            return;
-        }
-
-        if (name.contains(String.valueOf(ResourceLocation.NAMESPACE_SEPARATOR))) {
-            path = ResourceLocation.fromNamespaceAndPath(namespace, "shaders/core/%s".formatted(namePath)).toString();
-        } else {
-            path = "shaders/core/%s".formatted(name);
-        }
-        this.vsPath = path;
-        this.fsName = path;
-        this.pipelineFormat = format;
+    private void create(ResourceProvider resourceProvider, ResourceLocation shaderLocation, VertexFormat format, CallbackInfo ci) {
+        String name = this.f_173300_;
 
         try {
-            String bindPath = String.format("%s/core/%s/%s", namespace, namePath, namePath);
-            if (!hasVulkanShader(bindPath)) {
+            String path = getVulkanShaderPath(name);
+            Initializer.LOGGER.info("[VM-DBG] create shader '{}' vulkanPath={}", name, path);
+            if (path == null) {
                 createLegacyShader(resourceProvider, format);
                 return;
             }
 
-            this.vulkanBindPath = bindPath;
-            Pipeline.Builder pipelineBuilder = new Pipeline.Builder(format, bindPath);
+            Pipeline.Builder pipelineBuilder = new Pipeline.Builder(format, path);
             pipelineBuilder.parseBindingsJSON();
             pipelineBuilder.compileShaders();
             this.pipeline = pipelineBuilder.createGraphicsPipeline();
+            wireUnresolvedUniforms();
         } catch (Exception e) {
-
-            Initializer.LOGGER.error("Error on shader {} creation, attempting conversion fallback", name, e);
-            createLegacyShader(resourceProvider, format);
+            Initializer.LOGGER.error("Error on shader {} creation", name, e);
+            createFallbackShader(format);
         }
     }
 
-    private static boolean hasVulkanShader(String bindPath) {
-        String resourcePath = "/assets/vulkanmod/shaders/%s.json".formatted(bindPath);
-        try (InputStream stream = Pipeline.class.getResourceAsStream(resourcePath)) {
-            return stream != null;
-        } catch (IOException exception) {
-            throw new RuntimeException("Failed to inspect Vulkan shader resource: " + resourcePath, exception);
+    // Bundled Vulkan shaders for mod namespaces can declare mod-custom uniforms (e.g. the Wither
+    // Storm's OverlayTextureColor) that VulkanMod's supplier registry doesn't know — those
+    // uniforms would NPE the UBO upload on first draw. Feed them from the ShaderInstance's own
+    // uniform buffers, which is where the mod writes the values; zero-fill anything that has no
+    // ShaderInstance uniform either, so an unknown name can never crash the frame.
+    private void wireUnresolvedUniforms() {
+        if (this.pipeline == null) {
+            return;
+        }
+
+        for (UBO ubo : this.pipeline.getBuffers()) {
+            for (Uniform vUniform : ubo.getUniforms()) {
+                if (vUniform.hasSupplier()) {
+                    continue;
+                }
+
+                com.mojang.blaze3d.shaders.Uniform uniform = this.f_173333_.get(vUniform.getName());
+
+                ByteBuffer byteBuffer;
+                if (uniform != null && uniform.getType() <= 3) {
+                    byteBuffer = MemoryUtil.memByteBuffer(uniform.getIntBuffer());
+                } else if (uniform != null && uniform.getType() <= 10) {
+                    byteBuffer = MemoryUtil.memByteBuffer(uniform.getFloatBuffer());
+                } else {
+                    Initializer.LOGGER.warn("No supplier or ShaderInstance uniform for '{}' in shader {}; zero-filling",
+                            vUniform.getName(), this.f_173300_);
+                    byteBuffer = MemoryUtil.memCalloc(vUniform.getSize() * 4);
+                }
+
+                MappedBuffer mappedBuffer = MappedBuffer.createFromBuffer(byteBuffer);
+                vUniform.setSupplier(() -> mappedBuffer);
+            }
         }
     }
 
-    private GraphicsPipeline createPipelineVariant(VertexFormat drawFormat) {
-        try {
-            Pipeline.Builder pipelineBuilder = new Pipeline.Builder(drawFormat, this.vulkanBindPath);
-            pipelineBuilder.parseBindingsJSON();
-            pipelineBuilder.compileShaders();
-            return pipelineBuilder.createGraphicsPipeline();
-        } catch (Exception e) {
-            Initializer.LOGGER.error("Error creating shader {} pipeline variant for draw format {}", this.name, drawFormat, e);
-            return this.pipeline;
+    @Redirect(method = "<init>", at = @At(value = "INVOKE", target = "Lnet/minecraft/client/renderer/ShaderInstance;m_173340_(Lnet/minecraft/server/packs/resources/ResourceProvider;Lcom/mojang/blaze3d/shaders/Program$Type;Ljava/lang/String;)Lcom/mojang/blaze3d/shaders/Program;", remap = false), require = 0)
+    private Program loadNames(ResourceProvider resourceProvider, Program.Type type, String name) {
+        if (this.f_173300_.contains(String.valueOf(ResourceLocation.NAMESPACE_SEPARATOR))) {
+            ResourceLocation location = ResourceLocation.tryParse(name);
+            String path = location.withPath("shaders/core/%s".formatted(location.getPath())).toString();
+
+            switch (type) {
+                case VERTEX -> this.vsPath = path;
+                case FRAGMENT -> this.fsName = path;
+            }
         }
+
+        return null;
     }
 
-    private static boolean isUsableShaderPath(String namePath) {
-        return namePath != null && !namePath.isBlank();
-    }
-
-    @Redirect(method = "<init>(Lnet/minecraft/server/packs/resources/ResourceProvider;Lnet/minecraft/resources/ResourceLocation;Lcom/mojang/blaze3d/vertex/VertexFormat;)V", at = @At(value = "INVOKE", target = "Lcom/mojang/blaze3d/shaders/Uniform;glBindAttribLocation(IILjava/lang/CharSequence;)V"))
+    @Redirect(method = "<init>", at = @At(value = "INVOKE", target = "Lcom/mojang/blaze3d/shaders/Uniform;m_166710_(IILjava/lang/CharSequence;)V", remap = false), require = 0)
     private void bindAttr(int program, int index, CharSequence name) {}
 
-    @Inject(method = "close", at = @At("HEAD"), cancellable = true)
-    public void close(CallbackInfo ci) {
+    // The methods below replace vanilla behavior with inject-and-cancel instead of @Overwrite so
+    // other mods' handlers targeting ShaderInstance still apply without a mixin crash.
+
+    @Inject(method = "close", at = @At("HEAD"), cancellable = true, remap = false)
+    private void onClose(CallbackInfo ci) {
         if (this.pipeline != null)
             this.pipeline.cleanUp();
-        this.variantPipelines.values().forEach(variantPipeline -> {
-            if (variantPipeline != null && variantPipeline != this.pipeline) {
-                variantPipeline.cleanUp();
-            }
-        });
-        this.variantPipelines.clear();
         ci.cancel();
     }
 
-    @Inject(method = "apply", at = @At("HEAD"), cancellable = true)
-    public void apply(CallbackInfo ci) {
+    // apply
+    @Inject(method = "m_173363_", at = @At("HEAD"), cancellable = true, remap = false)
+    private void apply(CallbackInfo ci) {
         ci.cancel();
+
         if (!this.isLegacy)
             return;
 
-        if (this.MODEL_VIEW_MATRIX != null) {
-            this.MODEL_VIEW_MATRIX.set(RenderSystem.getModelViewMatrix());
+        if (this.f_173308_ != null) {
+            this.f_173308_.set(RenderSystem.getModelViewMatrix());
         }
 
-        if (this.PROJECTION_MATRIX != null) {
-            this.PROJECTION_MATRIX.set(RenderSystem.getProjectionMatrix());
+        if (this.f_173309_ != null) {
+            this.f_173309_.set(RenderSystem.getProjectionMatrix());
         }
 
-        if (this.COLOR_MODULATOR != null) {
-            this.COLOR_MODULATOR.set(RenderSystem.getShaderColor());
+        if (this.f_200956_ != null) {
+            this.f_200956_.set(RenderSystem.getInverseViewRotationMatrix());
         }
 
-        if (this.GLINT_ALPHA != null) {
-            this.GLINT_ALPHA.set(RenderSystem.getShaderGlintAlpha());
+        if (this.f_173312_ != null) {
+            this.f_173312_.set(RenderSystem.getShaderColor());
         }
 
-        if (this.FOG_START != null) {
-            this.FOG_START.set(RenderSystem.getShaderFogStart());
+        if (this.f_267422_ != null) {
+            this.f_267422_.set(RenderSystem.getShaderGlintAlpha());
         }
 
-        if (this.FOG_END != null) {
-            this.FOG_END.set(RenderSystem.getShaderFogEnd());
+        if (this.f_173315_ != null) {
+            this.f_173315_.set(RenderSystem.getShaderFogStart());
         }
 
-        if (this.FOG_COLOR != null) {
-            this.FOG_COLOR.set(RenderSystem.getShaderFogColor());
+        if (this.f_173316_ != null) {
+            this.f_173316_.set(RenderSystem.getShaderFogEnd());
         }
 
-        if (this.FOG_SHAPE != null) {
-            this.FOG_SHAPE.set(RenderSystem.getShaderFogShape().getIndex());
+        if (this.f_173317_ != null) {
+            this.f_173317_.set(RenderSystem.getShaderFogColor());
         }
 
-        if (this.TEXTURE_MATRIX != null) {
-            this.TEXTURE_MATRIX.set(RenderSystem.getTextureMatrix());
+        if (this.f_202432_ != null) {
+            this.f_202432_.set(RenderSystem.getShaderFogShape().getIndex());
         }
 
-        if (this.GAME_TIME != null) {
-            this.GAME_TIME.set(RenderSystem.getShaderGameTime());
+        if (this.f_173310_ != null) {
+            this.f_173310_.set(RenderSystem.getTextureMatrix());
         }
 
-        if (this.SCREEN_SIZE != null) {
+        if (this.f_173319_ != null) {
+            this.f_173319_.set(RenderSystem.getShaderGameTime());
+        }
+
+        if (this.f_173311_ != null) {
             Window window = Minecraft.getInstance().getWindow();
-            this.SCREEN_SIZE.set((float) window.getWidth(), (float) window.getHeight());
+            this.f_173311_.set((float)window.getWidth(), (float)window.getHeight());
         }
 
-        if (this.LINE_WIDTH != null) {
-            this.LINE_WIDTH.set(RenderSystem.getShaderLineWidth());
+        if (this.f_173318_ != null) {
+            this.f_173318_.set(RenderSystem.getShaderLineWidth());
         }
+
+        // Vanilla ShaderInstance.apply() calls setupShaderLights to feed LIGHT0/1_DIRECTION; this @Overwrite
+        // omitted it. Custom mod shaders that use minecraft_mix_light (e.g. Cracker's Wither Storm body)
+        // then get unset (0,0,0) directions -> normalize() NaN -> NaN lighting -> the whole model renders
+        // invisible. Setting them fixes any custom shader that relies on the vanilla light uniforms.
+        RenderSystem.setupShaderLights((ShaderInstance) (Object) this);
     }
 
-    @Inject(method = "clear", at = @At("HEAD"), cancellable = true)
-    public void clear(CallbackInfo ci) {
+    // clear: descriptor cleanup is handled by the pipeline itself.
+    @Inject(method = "m_173362_", at = @At("HEAD"), cancellable = true, remap = false)
+    private void clear(CallbackInfo ci) {
         ci.cancel();
     }
 
     private void setUniformSuppliers(UBO ubo) {
 
-        for (Uniform vUniform : ubo.getUniforms()) {
-            com.mojang.blaze3d.shaders.Uniform uniform = this.uniformMap.get(vUniform.getName());
+        for(Uniform vUniform : ubo.getUniforms()) {
+            com.mojang.blaze3d.shaders.Uniform uniform = this.f_173333_.get(vUniform.getName());
 
-            if (uniform == null) {
-                if (vUniform.hasSupplier()) {
-                    Initializer.LOGGER.debug("Continuing with global shader uniform supplier for {}", vUniform.getName());
-                    continue;
-                }
+            if(uniform == null) {
                 Initializer.LOGGER.error(String.format("Error: field %s not present in uniform map", vUniform.getName()));
                 continue;
             }
@@ -267,6 +258,7 @@ public class ShaderInstanceM implements ShaderMixed {
                 throw new RuntimeException("out of bounds value for uniform " + uniform);
             }
 
+
             MappedBuffer mappedBuffer = MappedBuffer.createFromBuffer(byteBuffer);
             supplier = () -> mappedBuffer;
 
@@ -277,61 +269,49 @@ public class ShaderInstanceM implements ShaderMixed {
 
     private void createLegacyShader(ResourceProvider resourceProvider, VertexFormat format) {
         try {
-            ResourceLocation jsonLocation = ResourceLocation.tryParse(this.vsPath + ".json");
-            Resource resource = resourceProvider.getResourceOrThrow(jsonLocation);
-            JsonObject jsonObject;
-            try (InputStream inputStream = resource.open()) {
-                jsonObject = GsonHelper.parse(new InputStreamReader(inputStream, StandardCharsets.UTF_8));
-            }
-
-            ResourceLocation vertLocation = resolveShaderStageLocation(GsonHelper.getAsString(jsonObject, "vertex"), "vsh");
-            ResourceLocation fragLocation = resolveShaderStageLocation(GsonHelper.getAsString(jsonObject, "fragment"), "fsh");
-
-            resource = resourceProvider.getResourceOrThrow(vertLocation);
+            String vertPath = this.vsPath + ".vsh";
+            Resource resource = resourceProvider.getResourceOrThrow(ResourceLocation.tryParse(vertPath));
             InputStream inputStream = resource.open();
-            String vshSrc = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+            String vshSrc = IOUtils.toString(inputStream, StandardCharsets.UTF_8);
 
-            resource = resourceProvider.getResourceOrThrow(fragLocation);
+            String fragPath = this.fsName + ".fsh";
+            resource = resourceProvider.getResourceOrThrow(ResourceLocation.tryParse(fragPath));
             inputStream = resource.open();
-            String fshSrc = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+            String fshSrc = IOUtils.toString(inputStream, StandardCharsets.UTF_8);
 
             GlslConverter converter = new GlslConverter();
-            converter.setFormat(format);
-            Pipeline.Builder builder = new Pipeline.Builder(format, this.name);
+            Pipeline.Builder builder = new Pipeline.Builder(format, this.f_173300_);
 
+            converter.setFormat(format);
             converter.process(vshSrc, fshSrc);
             UBO ubo = converter.getUBO();
             this.setUniformSuppliers(ubo);
 
             builder.setUniforms(Collections.singletonList(ubo), converter.getSamplerList());
-            builder.compileShaders(this.name, converter.getVshConverted(), converter.getFshConverted());
+            builder.compileShaders(this.f_173300_, converter.getVshConverted(), converter.getFshConverted());
 
             this.pipeline = builder.createGraphicsPipeline();
             this.isLegacy = true;
 
-        } catch (Exception e) {
-            Initializer.LOGGER.error("Error on shader {} conversion/compilation", this.name, e);
-            GlEmulationLog.warnContractGap("shader_conversion", "fallbackShader",
-                    "Using generic fallback shader for unsupported GLSL contract {}; shader={}",
-                    classifyShaderFailure(e), this.name);
-            createExternalFallbackShader(format);
+            Initializer.LOGGER.info("[VM-DBG] legacy shader '{}' fmt={} samplers={} uboUniforms={}",
+                    this.f_173300_, format,
+                    converter.getSamplerList(),
+                    ubo.getUniforms().stream().map(net.vulkanmod.vulkan.shader.layout.Uniform::getName).toList());
+
+        } catch (Throwable e) {
+            Initializer.LOGGER.error("[VM-DBG] createLegacyShader FAILED for '{}' (vsPath={}): {}", this.f_173300_, this.vsPath, e.toString(), e);
+            createFallbackShader(format);
         }
     }
 
-    private static String classifyShaderFailure(Throwable throwable) {
-        String message = throwable != null && throwable.getMessage() != null ? throwable.getMessage().toLowerCase(java.util.Locale.ROOT) : "";
-        if (message.contains("include")) return "include";
-        if (message.contains("uniform")) return "uniform";
-        if (message.contains("sampler")) return "sampler";
-        if (message.contains("attribute") || message.contains("attrib")) return "attribute";
-        if (message.contains("syntax")) return "syntax";
-        return "unknown";
-    }
-
-    private void createExternalFallbackShader(VertexFormat format) {
+    // When a mod shader can neither use a bundled Vulkan shader nor be converted from GLSL, bind a
+    // bundled vanilla pipeline matching its vertex format instead of leaving the pipeline null —
+    // a null pipeline silently drops every draw (invisible geometry). Approximate shading beats
+    // nothing rendering at all.
+    private void createFallbackShader(VertexFormat format) {
         String fallbackPath = fallbackShaderPath(format);
         if (fallbackPath == null) {
-            Initializer.LOGGER.warn("No safe Vulkan fallback shader for {} with vertex format {}", this.name, format);
+            Initializer.LOGGER.warn("No safe Vulkan fallback shader for {} with vertex format {}", this.f_173300_, format);
             return;
         }
 
@@ -340,16 +320,27 @@ public class ShaderInstanceM implements ShaderMixed {
             builder.parseBindingsJSON();
             builder.compileShaders();
             this.pipeline = builder.createGraphicsPipeline();
-            this.vulkanBindPath = fallbackPath;
-            this.pipelineFormat = format;
             this.isLegacy = false;
-            Initializer.LOGGER.warn("Using Vulkan fallback shader {} for external shader {}", fallbackPath, this.name);
+            wireUnresolvedUniforms();
+            Initializer.LOGGER.warn("Using Vulkan fallback shader {} for external shader {}", fallbackPath, this.f_173300_);
         } catch (Exception fallbackException) {
-            Initializer.LOGGER.error("Error creating Vulkan fallback shader {} for {}", fallbackPath, this.name, fallbackException);
+            Initializer.LOGGER.error("Error creating Vulkan fallback shader {} for {}", fallbackPath, this.f_173300_, fallbackException);
         }
     }
 
     private static String fallbackShaderPath(VertexFormat format) {
+        if (DefaultVertexFormat.BLIT_SCREEN.equals(format)) {
+            return "minecraft/core/blit_screen/blit_screen";
+        }
+
+        if (DefaultVertexFormat.PARTICLE.equals(format)) {
+            return "minecraft/core/particle/particle";
+        }
+
+        if (DefaultVertexFormat.NEW_ENTITY.equals(format)) {
+            return "minecraft/core/rendertype_entity_cutout_no_cull/rendertype_entity_cutout_no_cull";
+        }
+
         if (DefaultVertexFormat.POSITION_TEX_COLOR.equals(format)) {
             return "minecraft/core/position_tex_color/position_tex_color";
         }
@@ -358,8 +349,32 @@ public class ShaderInstanceM implements ShaderMixed {
             return "minecraft/core/position_tex/position_tex";
         }
 
+        if (hasAttributes(format, "Position", "Color", "UV0")) {
+            return "minecraft/core/position_color_tex/position_color_tex";
+        }
+
         if (DefaultVertexFormat.POSITION_COLOR_TEX_LIGHTMAP.equals(format)) {
             return "minecraft/core/position_color_tex_lightmap/position_color_tex_lightmap";
+        }
+
+        if (hasAttributes(format, "Position", "UV0", "Color", "UV2")) {
+            return "minecraft/core/particle/particle";
+        }
+
+        if (hasAttributes(format, "Position", "UV0", "Color")) {
+            return "minecraft/core/position_tex_color/position_tex_color";
+        }
+
+        if (DefaultVertexFormat.POSITION_COLOR_LIGHTMAP.equals(format)) {
+            return "minecraft/core/position_color_lightmap/position_color_lightmap";
+        }
+
+        if (DefaultVertexFormat.POSITION_COLOR_NORMAL.equals(format)) {
+            return "minecraft/core/position_color_normal/position_color_normal";
+        }
+
+        if (DefaultVertexFormat.POSITION_TEX_COLOR_NORMAL.equals(format)) {
+            return "minecraft/core/position_tex_color_normal/position_tex_color_normal";
         }
 
         if (DefaultVertexFormat.POSITION_COLOR.equals(format)) {
@@ -373,13 +388,22 @@ public class ShaderInstanceM implements ShaderMixed {
         return null;
     }
 
-    private static ResourceLocation resolveShaderStageLocation(String stageName, String extension) {
-        ResourceLocation stage = ResourceLocation.tryParse(stageName);
-        if (stage == null) {
-            throw new IllegalArgumentException("Invalid shader stage: " + stageName);
+    private static boolean hasAttributes(VertexFormat format, String... attributes) {
+        return format != null && format.getElementAttributeNames().equals(java.util.List.of(attributes));
+    }
+
+    private static String getVulkanShaderPath(String name) {
+        ResourceLocation location = ResourceLocation.tryParse(name);
+        if (location == null) {
+            return null;
         }
 
-        return ResourceLocation.fromNamespaceAndPath(stage.getNamespace(), "shaders/core/%s.%s".formatted(stage.getPath(), extension));
+        String path = location.getNamespace().equals("minecraft")
+                ? String.format("minecraft/core/%s/%s", location.getPath(), location.getPath())
+                : String.format("%s/core/%s/%s", location.getNamespace(), location.getPath(), location.getPath());
+        String resourcePath = String.format("/assets/vulkanmod/shaders/%s.json", path);
+        return Pipeline.class.getResourceAsStream(resourcePath) != null ? path : null;
     }
 }
+
 
